<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hu.bme.androidhazi.moonbuggy.MenuActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/btnStartGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startGame"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btnShowHighscores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showHighscores"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btnShowSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showSettings"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exitGame"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>



</RelativeLayout>
